# my-template

./: AGENTS.md  CLAUDE.md  README.md  lefthook.yml
.github/workflows/: go-ci.yml  python-ci.yml  typescript-ci.yml
go/: README.md  go.mod
go-codebase/: README.md  go.mod
go-codebase/cmd/my-app/: main.go
go-codebase/pkg/my-package/: package_test.go
go/internal/my-module/: module_test.go
python/: .dockerignore  Dockerfile  README.md  pyproject.toml
python-codebase/: README.md
python-codebase/src/my_package/: __init__.py  main.py
python/src/my_package/: main.py
rust-codebase/: README.md
typescript/: Dockerfile  README.md
typescript-codebase/: .dockerignore  README.md
