[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 120
fix = true
exclude = [
    ".venv",
    "libs",
]

[tool.ruff.lint]
# select all rules except the ones that conflict with others rules or formatters.
select = ["ALL"]
ignore = [
    "D203", # incorrect-blank-line-before-class, conflicts with D211
    "D213", # multi-line-summary-second-line, conflicts with D212
    "COM812", # missing-trailing-comma, conflicts with formatters
]

[tool.pyright]
typeCheckingMode = "strict"
